--- a/index.html
+++ b/index.html
@@ -255,8 +255,7 @@ img {
 
 <ul>
 <li>Recommendations and personalization in Python and C#</li>
-<li>Multi-armed bandits for display artwork optimization</li>
-<li>Improve observability, telemetry, and alerting</li>
+<li>Improve website recommendations through innovations in candidate generation and model architecture GRU4Rec</li>
 </ul>
 
 
