more detail on SH

--- a/index.html
+++ b/index.html
@@ -255,7 +255,8 @@ img {
 
 <ul>
 <li>Recommendations and personalization in Python and C#</li>
-<li>Improve website recommendations through innovations in candidate generation and model architecture GRU4Rec</li>
+<li>Improve website recommendations through innovations in candidate generation and model architecture, eg <a href="https://recbole.io/docs/user_guide/model/sequential/gru4rec.html">GRU4Rec</a> </li>
+<li> Introduce reinforcement learning for message budgeting in direct marketing area </li>
 </ul>
 
 
