--- a/index.html
+++ b/index.html
@@ -294,21 +294,11 @@ img {
 </ul>
 </div>
 
-<div class="job-section">
-<div class="job-title">Stitch Fix, San Francisco, CA</div>
-<div class="job-details">Data Scientist | July 2015 - June 2018</div>
-<ul class="achievements"
-<li>Develop personalized recommender systems for women’s clothing and implement them in production</li>
-<li>Increased revenue by $8+ million per year by quantifying style</li>
-<li>Use contextual bandits to optimize where and when to show different recommendations</li>
-<li>Develop end-to-end data science pipelines in Spark, Python and R using AWS, Docker, and Jenkins</li>
-</ul>
-</div>
-
 <h2 id="toc_8">Publications</h2>
 
 <ul>
-<li><a href="https://dl.acm.org/doi/10.1145/3640457.3688056"> (2024) Towards Understanding The Gaps of Offline And Online Evaluation Metrics: Impact of Series vs. Movie Recommendations</a></li>
+<li><a href="https://dl.acm.org/doi/10.1145/3640457.3688056"> (RecSys 2024) Towards Understanding The Gaps of Offline And Online Evaluation Metrics: Impact of Series vs. Movie Recommendations</a></li>
+<li><a href="https://www.youtube.com/watch?v=jrprjZEX9gU"> (PyData NYC 2017) Diamond: optimization of mixed-effects models in Python </a></li>
 </ul>
 
 <h2 id="toc_8">Education</h2>
